--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <div class="column">
             <div class="column-2 bg-light">
               <h2>Hamse Baatiyana hai</h2>
-              <form method="POST" name="contact" data-netlify="true" class="callback-form">
+              <form method="POST" name="contact" netlify data-netlify="true" class="callback-form">
                 <div class="form-control">
                   <label for="name"></label>
                   <input
