--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
                     type="text"
                     name="name"
                     id="name"
+                    data-netlify="true"
                     placeholder="Enter name"
                   />
                 </div>
@@ -245,6 +246,7 @@
                     type="email"
                     name="email"
                     id="email"
+                    data-netlify="true"
                     placeholder="Enter email"
                   />
                 </div>
@@ -254,6 +256,7 @@
                     type="text"
                     name="phone"
                     id="phone"
+                    data-netlify="true"
                     placeholder="Enter phone"
                   />
                 </div>
