--- a/index.html
+++ b/index.html
@@ -229,14 +229,13 @@
           <div class="column">
             <div class="column-2 bg-light">
               <h2>Hamse Baatiyana hai</h2>
-              <form method="POST" name="contact" netlify data-netlify="true" class="callback-form">
+              <form method="POST" name="contact" netlify data-netlify="true" netlify-honeypot="bot-field" class="callback-form">
                 <div class="form-control">
                   <label for="name"></label>
                   <input
                     type="text"
                     name="name"
                     id="name"
-                    data-netlify="true"
                     placeholder="Enter name"
                   />
                 </div>
@@ -246,7 +245,6 @@
                     type="email"
                     name="email"
                     id="email"
-                    data-netlify="true"
                     placeholder="Enter email"
                   />
                 </div>
@@ -256,7 +254,6 @@
                     type="text"
                     name="phone"
                     id="phone"
-                    data-netlify="true"
                     placeholder="Enter phone"
                   />
                 </div>
